@@ -119,19 +119,16 @@ to switch back.
   <title>Known issues</title>
 <para>
 
-Etch is the first release that includes the graphical installer and uses
-some relatively new technology. There are a few known issues that you may
-run into during the installation. We expect to be able to fix these issues
-for the next release of &debian;.
+The graphical frontend to the installer is relatively new and because of
+that there are some known issues. We continue to work on resolving these.
 
 </para>
 
 <itemizedlist>
 <listitem><para>
 
-Information on some screens is not nicely formatted into columns as it
-should be. The most obvious example is the first screen where you select
-your language. Another example is the main screen of partman.
+Information on some screens is not yet nicely formatted into columns as it
+should be. This is most visible during partitioning.
 
 </para></listitem>
 <listitem><para>
@@ -144,13 +141,6 @@ then the letter over/under which the accent should appear does not work.
 <listitem><para>
 
 Support for touchpads is not yet optimal.
-
-</para></listitem>
-<listitem><para>
-
-Support for creating encrypted partitions is limited as it is not possible
-to generate a random encryption key. It is possible to set up an encrypted
-partition using a passphrase as encryption key.
 
 </para></listitem>
 <listitem><para>
