@@ -269,16 +269,7 @@ Please see the the section on erasing data above.
 
 </variablelist>
 
-</para>
-<note condition="gtk"><para>
-
-Please note that the <emphasis>graphical</emphasis> version of the
-installer still has some limitations when compared to the textual
-one. For cryptography it means you can set up only volumes using a
-<emphasis>passphrase</emphasis> as the encryption key.
-
-</para></note>
-<para>
+</para><para>
 
 After you have selected the desired parameters for your encrypted
 partitions, return back to the main partitioning menu. There should
