@@ -32,11 +32,14 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Update kernel versions.
   * Update memory requirements for i386 and amd64. Elaborate on installing
     systems with less memory than the listed minimum.
+  * Update known issues for graphical installer: entropy gathering for
+    encrypted partitioning is now supported; localechooser now has nice
+    columns but other components still need to be done.
 
   [ Joey Hess ]
   * Remove autopartkit from the module list.
 
- -- Frans Pop <fjp@debian.org>  Wed, 30 Apr 2008 08:17:39 +0200
+ -- Frans Pop <fjp@debian.org>  Sun, 04 May 2008 12:48:07 +0200
 
 installation-guide (20080211) unstable; urgency=low
 
